src/styles/base.css
/* small reset */
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
ul,
ol {
  list-style-type: none;
}
a {
  text-decoration: none;
}

/* Gloabal styles */
body {
  background-color: var(--bg-light);
  overflow-x: hidden;
}

/* TODO: Revisar en que partes estoy repitiendo este estilo para eliminarlos ahí */
div,
p,
a,
ul,
ol,
h1,
h2,
h3,
h4,
h5,
h6,
label,
button,
input {
  font-family: var(--font-family);
}

p {
  max-width: 70ch;
}

a,
button {
  cursor: pointer;
}
img {
  object-fit: contain;
}

/* Sticky footer */
#root {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}
main {
  flex: 1;
}

/* Other styles */
.navHover:hover {
  background-color: var(--border-graySurfaces-light);
}

